--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
-    "passport": "^0.4.1",
+    "passport": "0.4.1",
     "passport-facebook": "^3.0.0",
+    "passport-github-token": "3.0.0",
     "passport-github2": "0.1.12",
     "passport-google-oauth2": "^0.2.0",
     "passport-linkedin-oauth2": "^2.0.0",
